feature: select action pagination
