# alexa-rpg-backoffice/build-tsoa/swagger.json
@@ -268,6 +268,65 @@
 			"TCreateActionInput": {
 				"$ref": "#/components/schemas/Omit_TActionModel.id-or-idStory-or-createdAt-or-updatedAt-or-deletedAt_"
 			},
+			"TPagination_TActionModel_": {
+				"properties": {
+					"pagination": {
+						"properties": {
+							"hasPreviousPage": {
+								"type": "boolean"
+							},
+							"hasNextPage": {
+								"type": "boolean"
+							},
+							"totalPages": {
+								"type": "number",
+								"format": "double"
+							},
+							"pageSize": {
+								"type": "number",
+								"format": "double"
+							},
+							"page": {
+								"type": "number",
+								"format": "double"
+							},
+							"totalRows": {
+								"type": "number",
+								"format": "double"
+							}
+						},
+						"required": [
+							"hasPreviousPage",
+							"hasNextPage",
+							"totalPages",
+							"pageSize",
+							"page",
+							"totalRows"
+						],
+						"type": "object"
+					},
+					"rows": {
+						"items": {
+							"$ref": "#/components/schemas/TActionModel"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"pagination",
+					"rows"
+				],
+				"type": "object"
+			},
+			"TSuccessRateComparator": {
+				"type": "string",
+				"enum": [
+					"lt",
+					"lte",
+					"bt",
+					"bte"
+				]
+			},
 			"Pick_TActionModel.description-or-idOriginSegment-or-idSegmentFailure-or-idSegmentSuccess-or-successRate-or-tags_": {
 				"properties": {
 					"idOriginSegment": {
@@ -745,6 +804,114 @@
 						"required": true,
 						"schema": {
 							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/v1/action/all/{idStory}": {
+			"get": {
+				"operationId": "GetAllPaginated",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TPagination_TActionModel_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Action"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "idStory",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "description",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "tags",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "successRate",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "successRateComparator",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/TSuccessRateComparator"
+						}
+					},
+					{
+						"in": "query",
+						"name": "page",
+						"required": false,
+						"schema": {
+							"default": 1,
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "pageSize",
+						"required": false,
+						"schema": {
+							"default": 30,
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "orderBy",
+						"required": false,
+						"schema": {
+							"type": "string",
+							"enum": [
+								"description",
+								"successRate"
+							]
+						}
+					},
+					{
+						"in": "query",
+						"name": "isDesc",
+						"required": false,
+						"schema": {
+							"type": "string",
+							"enum": [
+								"true",
+								"false"
+							]
 						}
 					}
 				]
