# alexa-rpg-backoffice/src/controllers/v1/action.controller.ts
@@ -1,15 +1,23 @@
-import { IDeleteActionUseCase, IGetSegmentActionsUseCase } from '@src/domain/usecases';
 import { ICreateActionUseCase } from '@src/domain/usecases/action/create/create.interface';
 import { IGetActionByIdUseCase } from '@src/domain/usecases/action/get-by-id';
 import { IUpdateActionUseCase } from '@src/domain/usecases/action/update';
+import { InvalidParamError } from '@src/errors';
 import { ICustomRequest } from '@src/utils/interfaces/custom-request';
 import { TYPES } from '@src/utils/inversify-types';
 import { provideSingleton } from '@src/utils/provide-singleton';
 import { inject } from 'inversify';
 import { BaseHttpController, interfaces } from 'inversify-express-utils';
-import { Body, Delete, Get, Path, Post, Put, Request, Route, Tags } from 'tsoa';
+import { Body, Delete, Get, Path, Post, Put, Query, Request, Route, Tags } from 'tsoa';
 
 import { TActionModel, TCreateActionInput, TUpdateActionInput } from '../../domain/models';
+import {
+  IDeleteActionUseCase,
+  IGetSegmentActionsUseCase,
+  ISelectActionPaginationUseCase,
+  TActionParams,
+  TSuccessRateComparator,
+} from '../../domain/usecases';
+import { TPagination } from '../../utils/interfaces/pagination';
 
 @Route('v1/action')
 @Tags('Action')
@@ -26,6 +34,8 @@ export class ActionController extends BaseHttpController implements interfaces.C
     private readonly getActionByIdUseCase: IGetActionByIdUseCase,
     @inject(TYPES.usecases.DeleteActionUseCase)
     private readonly deleteActionUseCase: IDeleteActionUseCase,
+    @inject(TYPES.usecases.SelectActionPaginationUseCase)
+    private readonly selectActionPaginationUseCase: ISelectActionPaginationUseCase,
   ) {
     super();
   }
@@ -50,6 +60,48 @@ export class ActionController extends BaseHttpController implements interfaces.C
     const result = await this.getActionByIdUseCase.execute(idAction);
 
     return result;
+  }
+
+  @Get('/all/:idStory')
+  async getAllPaginated(
+    @Path('idStory') idStory: string,
+    @Request()
+    _req: ICustomRequest,
+    @Query('description') description?: string,
+    @Query('tags') tags?: string,
+    @Query('successRate') successRate?: number,
+    @Query('successRateComparator') successRateComparator?: TSuccessRateComparator,
+    @Query('page') page: number = 1,
+    @Query('pageSize') pageSize: number = 30,
+    @Query('orderBy') orderBy?: 'description' | 'successRate',
+    @Query('isDesc') isDesc?: 'true' | 'false',
+  ): Promise<TPagination<TActionModel>> {
+    if ((orderBy && !isDesc) || (!orderBy && isDesc)) {
+      throw new InvalidParamError('orderBy and isDesc params should be used together');
+    }
+
+    if (successRateComparator && typeof successRate !== 'number') {
+      throw new InvalidParamError('successRateComparator should only be used with successRate param');
+    }
+
+    if (successRate && successRate < 0) throw new InvalidParamError('successRate param should be equal 0 or bigger');
+
+    const formattedTags = tags?.split(';');
+
+    console.log(pageSize);
+
+    const response = await this.selectActionPaginationUseCase.execute(
+      idStory,
+      {
+        ...(description && { description }),
+        ...(formattedTags?.length && { tags: formattedTags }),
+        ...(successRate && { successRate }),
+        ...(successRateComparator && { successRateComparator }),
+      },
+      { page, pageSize, ...(orderBy && isDesc && { order: { orderBy, isDesc } }) },
+    );
+
+    return response;
   }
 
   @Put('/:idAction')
